receiver/mtailreceiver/internal/mtail/runtime/compiler/parser/y.output

state 0
	$accept: .start $end 
	stmt_list: .    (2)

	.  reduce 2 (src line 102)

	stmt_list  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  stmt_list.    (1)
	stmt_list:  stmt_list.stmt 
	mark_pos: .    (129)
	metric_hide_spec: .    (98)

	$end  reduce 1 (src line 94)
	INVALID  shift 14
	COUNTER  reduce 98 (src line 553)
	GAUGE  reduce 98 (src line 553)
	TIMER  reduce 98 (src line 553)
	TEXT  reduce 98 (src line 553)
	HISTOGRAM  reduce 98 (src line 553)
	CONST  shift 12
	HIDDEN  shift 25
	NEXT  shift 11
	STOP  shift 13
	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	NL  shift 18
	LOGFILTER  shift 15
	.  reduce 129 (src line 740)

	stmt  goto 3
	conditional_stmt  goto 5
	conditional_expr  goto 16
	expr_stmt  goto 6
	expr  goto 19
	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 24
	unary_expr  goto 29
	assign_expr  goto 23
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 22
	indexed_expr  goto 34
	id_expr  goto 43
	concat_expr  goto 26
	pattern_expr  goto 21
	metric_declaration  goto 7
	decorator_declaration  goto 8
	decoration_stmt  goto 9
	regex_pattern  goto 31
	match_expr  goto 28
	delete_stmt  goto 10
	builtin_expr  goto 35
	metric_hide_spec  goto 20
	log_filter_stmt  goto 4
	mark_pos  goto 17

state 3
	stmt_list:  stmt_list stmt.    (3)

	.  reduce 3 (src line 107)


state 4
	stmt:  log_filter_stmt.    (4)

	.  reduce 4 (src line 117)


state 5
	stmt:  conditional_stmt.    (5)

	.  reduce 5 (src line 120)


state 6
	stmt:  expr_stmt.    (6)

	.  reduce 6 (src line 122)


state 7
	stmt:  metric_declaration.    (7)

	.  reduce 7 (src line 124)


state 8
	stmt:  decorator_declaration.    (8)

	.  reduce 8 (src line 126)


state 9
	stmt:  decoration_stmt.    (9)

	.  reduce 9 (src line 128)


state 10
	stmt:  delete_stmt.    (10)

	.  reduce 10 (src line 130)


state 11
	stmt:  NEXT.    (11)

	.  reduce 11 (src line 132)


state 12
	stmt:  CONST.id_expr opt_nl concat_expr 

	ID  shift 45
	.  error

	id_expr  goto 47

state 13
	stmt:  STOP.    (13)

	.  reduce 13 (src line 140)


state 14
	stmt:  INVALID.    (14)

	.  reduce 14 (src line 144)


state 15
	log_filter_stmt:  LOGFILTER.log_filter_list 

	STRING  shift 52
	ID  shift 51
	.  error

	id_or_string  goto 50
	log_filter_expr  goto 49
	log_filter_list  goto 48

state 16
	conditional_stmt:  conditional_expr.compound_stmt ELSE compound_stmt 
	conditional_stmt:  conditional_expr.compound_stmt 

	LCURLY  shift 54
	.  error

	compound_stmt  goto 53

state 17
	conditional_stmt:  mark_pos.OTHERWISE compound_stmt 
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 
	decorator_declaration:  mark_pos.DEF ID compound_stmt 
	decoration_stmt:  mark_pos.DECO compound_stmt 
	delete_stmt:  mark_pos.DEL postfix_expr AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos.DEL postfix_expr 

	DEF  shift 58
	DEL  shift 60
	OTHERWISE  shift 55
	BUILTIN  shift 56
	DECO  shift 59
	DIV  shift 57
	.  error


state 18
	expr_stmt:  NL.    (25)

	.  reduce 25 (src line 217)


state 19
	expr_stmt:  expr.NL 

	NL  shift 61
	.  error


state 20
	metric_declaration:  metric_hide_spec.metric_type_spec metric_decl_attr_spec 

	COUNTER  shift 63
	GAUGE  shift 64
	TIMER  shift 65
	TEXT  shift 66
	HISTOGRAM  shift 67
	.  error

	metric_type_spec  goto 62

state 21
	conditional_expr:  pattern_expr.    (22)
	conditional_expr:  pattern_expr.logical_op opt_nl logical_expr 

	AND  shift 69
	OR  shift 70
	.  reduce 22 (src line 199)

	logical_op  goto 68

state 22
	conditional_expr:  logical_expr.    (24)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 69
	OR  shift 70
	.  reduce 24 (src line 212)

	logical_op  goto 71

state 23
	expr:  assign_expr.    (28)

	.  reduce 28 (src line 233)


state 24
	expr:  postfix_expr.    (29)
	unary_expr:  postfix_expr.    (73)
	postfix_expr:  postfix_expr.postfix_op 

	INC  shift 73
	DEC  shift 74
	NL  reduce 29 (src line 236)
	.  reduce 73 (src line 417)

	postfix_op  goto 72

state 25
	metric_hide_spec:  HIDDEN.    (99)

	.  reduce 99 (src line 558)


state 26
	pattern_expr:  concat_expr.    (63)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 75
	.  reduce 63 (src line 374)


state 27
	logical_expr:  bitwise_expr.    (32)
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 

	BITAND  shift 77
	XOR  shift 79
	BITOR  shift 78
	.  reduce 32 (src line 253)

	bitwise_op  goto 76

state 28
	logical_expr:  match_expr.    (33)

	.  reduce 33 (src line 256)


state 29
	assign_expr:  unary_expr.ASSIGN opt_nl logical_expr 
	assign_expr:  unary_expr.ADD_ASSIGN opt_nl logical_expr 
	multiplicative_expr:  unary_expr.    (67)

	ADD_ASSIGN  shift 81
	ASSIGN  shift 80
	.  reduce 67 (src line 396)


state 30
	match_expr:  primary_expr.match_op opt_nl pattern_expr 
	match_expr:  primary_expr.match_op opt_nl primary_expr 
	postfix_expr:  primary_expr.    (75)

	MATCH  shift 83
	NOT_MATCH  shift 84
	.  reduce 75 (src line 427)

	match_op  goto 82

state 31
	concat_expr:  regex_pattern.    (64)

	.  reduce 64 (src line 382)


state 32
	bitwise_expr:  rel_expr.    (38)
	rel_expr:  rel_expr.rel_op opt_nl shift_expr 

	LT  shift 86
	GT  shift 87
	LE  shift 88
	GE  shift 89
	EQ  shift 90
	NE  shift 91
	.  reduce 38 (src line 276)

	rel_op  goto 85

state 33
	unary_expr:  NOT.unary_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	postfix_expr  goto 93
	unary_expr  goto 92
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 34
	primary_expr:  indexed_expr.    (79)
	indexed_expr:  indexed_expr.LSQUARE arg_expr_list RSQUARE 

	LSQUARE  shift 96
	.  reduce 79 (src line 444)


state 35
	primary_expr:  builtin_expr.    (80)

	.  reduce 80 (src line 447)


state 36
	primary_expr:  CAPREF.    (81)

	.  reduce 81 (src line 449)


state 37
	primary_expr:  CAPREF_NAMED.    (82)

	.  reduce 82 (src line 453)


state 38
	primary_expr:  STRING.    (83)

	.  reduce 83 (src line 457)


state 39
	primary_expr:  LPAREN.logical_expr RPAREN 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 97
	indexed_expr  goto 34
	id_expr  goto 43
	match_expr  goto 28
	builtin_expr  goto 35
	mark_pos  goto 95

state 40
	primary_expr:  INTLITERAL.    (85)

	.  reduce 85 (src line 465)


state 41
	primary_expr:  FLOATLITERAL.    (86)

	.  reduce 86 (src line 469)


state 42
	rel_expr:  shift_expr.    (43)
	shift_expr:  shift_expr.shift_op opt_nl additive_expr 

	SHL  shift 100
	SHR  shift 101
	.  reduce 43 (src line 295)

	shift_op  goto 99

state 43
	indexed_expr:  id_expr.    (87)

	.  reduce 87 (src line 476)


state 44
	shift_expr:  additive_expr.    (51)
	additive_expr:  additive_expr.add_op opt_nl multiplicative_expr 

	MINUS  shift 104
	PLUS  shift 103
	.  reduce 51 (src line 320)

	add_op  goto 102

state 45
	id_expr:  ID.    (89)

	.  reduce 89 (src line 492)


state 46
	additive_expr:  multiplicative_expr.    (55)
	multiplicative_expr:  multiplicative_expr.mul_op opt_nl unary_expr 

	DIV  shift 107
	MOD  shift 108
	MUL  shift 106
	POW  shift 109
	.  reduce 55 (src line 337)

	mul_op  goto 105

state 47
	stmt:  CONST id_expr.opt_nl concat_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 110

state 48
	log_filter_stmt:  LOGFILTER log_filter_list.    (15)
	log_filter_list:  log_filter_list.COMMA log_filter_expr 

	COMMA  shift 112
	.  reduce 15 (src line 150)


state 49
	log_filter_list:  log_filter_expr.    (16)

	.  reduce 16 (src line 160)


state 50
	log_filter_expr:  id_or_string.    (18)

	.  reduce 18 (src line 173)


state 51
	id_or_string:  ID.    (127)

	.  reduce 127 (src line 726)


state 52
	id_or_string:  STRING.    (128)

	.  reduce 128 (src line 731)


state 53
	conditional_stmt:  conditional_expr compound_stmt.ELSE compound_stmt 
	conditional_stmt:  conditional_expr compound_stmt.    (20)

	ELSE  shift 113
	.  reduce 20 (src line 184)


state 54
	compound_stmt:  LCURLY.stmt_list RCURLY 
	stmt_list: .    (2)

	.  reduce 2 (src line 102)

	stmt_list  goto 114

state 55
	conditional_stmt:  mark_pos OTHERWISE.compound_stmt 

	LCURLY  shift 54
	.  error

	compound_stmt  goto 115

state 56
	builtin_expr:  mark_pos BUILTIN.LPAREN RPAREN 
	builtin_expr:  mark_pos BUILTIN.LPAREN arg_expr_list RPAREN 

	LPAREN  shift 116
	.  error


state 57
	regex_pattern:  mark_pos DIV.in_regex REGEX DIV 
	in_regex: .    (130)

	.  reduce 130 (src line 750)

	in_regex  goto 117

state 58
	decorator_declaration:  mark_pos DEF.ID compound_stmt 

	ID  shift 118
	.  error


state 59
	decoration_stmt:  mark_pos DECO.compound_stmt 

	LCURLY  shift 54
	.  error

	compound_stmt  goto 119

state 60
	delete_stmt:  mark_pos DEL.postfix_expr AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos DEL.postfix_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	postfix_expr  goto 120
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 61
	expr_stmt:  expr NL.    (26)

	.  reduce 26 (src line 220)


state 62
	metric_declaration:  metric_hide_spec metric_type_spec.metric_decl_attr_spec 

	STRING  shift 124
	ID  shift 123
	.  error

	metric_decl_attr_spec  goto 121
	metric_name_spec  goto 122

state 63
	metric_type_spec:  COUNTER.    (107)

	.  reduce 107 (src line 605)


state 64
	metric_type_spec:  GAUGE.    (108)

	.  reduce 108 (src line 610)


state 65
	metric_type_spec:  TIMER.    (109)

	.  reduce 109 (src line 614)


state 66
	metric_type_spec:  TEXT.    (110)

	.  reduce 110 (src line 618)


state 67
	metric_type_spec:  HISTOGRAM.    (111)

	.  reduce 111 (src line 622)


state 68
	conditional_expr:  pattern_expr logical_op.opt_nl logical_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 125

state 69
	logical_op:  AND.    (36)

	.  reduce 36 (src line 268)


state 70
	logical_op:  OR.    (37)

	.  reduce 37 (src line 271)


state 71
	logical_expr:  logical_expr logical_op.opt_nl bitwise_expr 
	logical_expr:  logical_expr logical_op.opt_nl match_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 126

state 72
	postfix_expr:  postfix_expr postfix_op.    (76)

	.  reduce 76 (src line 430)


state 73
	postfix_op:  INC.    (77)

	.  reduce 77 (src line 436)


state 74
	postfix_op:  DEC.    (78)

	.  reduce 78 (src line 439)


state 75
	concat_expr:  concat_expr PLUS.opt_nl regex_pattern 
	concat_expr:  concat_expr PLUS.opt_nl id_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 127

state 76
	bitwise_expr:  bitwise_expr bitwise_op.opt_nl rel_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 128

state 77
	bitwise_op:  BITAND.    (40)

	.  reduce 40 (src line 285)


state 78
	bitwise_op:  BITOR.    (41)

	.  reduce 41 (src line 288)


state 79
	bitwise_op:  XOR.    (42)

	.  reduce 42 (src line 290)


state 80
	assign_expr:  unary_expr ASSIGN.opt_nl logical_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 129

state 81
	assign_expr:  unary_expr ADD_ASSIGN.opt_nl logical_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 130

state 82
	match_expr:  primary_expr match_op.opt_nl pattern_expr 
	match_expr:  primary_expr match_op.opt_nl primary_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 131

state 83
	match_op:  MATCH.    (61)

	.  reduce 61 (src line 365)


state 84
	match_op:  NOT_MATCH.    (62)

	.  reduce 62 (src line 368)


state 85
	rel_expr:  rel_expr rel_op.opt_nl shift_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 132

state 86
	rel_op:  LT.    (45)

	.  reduce 45 (src line 304)


state 87
	rel_op:  GT.    (46)

	.  reduce 46 (src line 307)


state 88
	rel_op:  LE.    (47)

	.  reduce 47 (src line 309)


state 89
	rel_op:  GE.    (48)

	.  reduce 48 (src line 311)


state 90
	rel_op:  EQ.    (49)

	.  reduce 49 (src line 313)


state 91
	rel_op:  NE.    (50)

	.  reduce 50 (src line 315)


state 92
	unary_expr:  NOT unary_expr.    (74)

	.  reduce 74 (src line 420)


state 93
	unary_expr:  postfix_expr.    (73)
	postfix_expr:  postfix_expr.postfix_op 

	INC  shift 73
	DEC  shift 74
	.  reduce 73 (src line 417)

	postfix_op  goto 72

state 94
	postfix_expr:  primary_expr.    (75)

	.  reduce 75 (src line 427)


state 95
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 

	BUILTIN  shift 56
	.  error


state 96
	indexed_expr:  indexed_expr LSQUARE.arg_expr_list RSQUARE 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	arg_expr_list  goto 133
	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 135
	indexed_expr  goto 34
	id_expr  goto 43
	concat_expr  goto 26
	pattern_expr  goto 136
	regex_pattern  goto 31
	match_expr  goto 28
	builtin_expr  goto 35
	arg_expr  goto 134
	mark_pos  goto 137

state 97
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 
	primary_expr:  LPAREN logical_expr.RPAREN 

	AND  shift 69
	OR  shift 70
	RPAREN  shift 138
	.  error

	logical_op  goto 71

state 98
	multiplicative_expr:  unary_expr.    (67)

	.  reduce 67 (src line 396)


state 99
	shift_expr:  shift_expr shift_op.opt_nl additive_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 139

state 100
	shift_op:  SHL.    (53)

	.  reduce 53 (src line 329)


state 101
	shift_op:  SHR.    (54)

	.  reduce 54 (src line 332)


state 102
	additive_expr:  additive_expr add_op.opt_nl multiplicative_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 140

state 103
	add_op:  PLUS.    (57)

	.  reduce 57 (src line 346)


state 104
	add_op:  MINUS.    (58)

	.  reduce 58 (src line 349)


state 105
	multiplicative_expr:  multiplicative_expr mul_op.opt_nl unary_expr 
	opt_nl: .    (131)

	NL  shift 111
	.  reduce 131 (src line 760)

	opt_nl  goto 141

state 106
	mul_op:  MUL.    (69)

	.  reduce 69 (src line 405)


state 107
	mul_op:  DIV.    (70)

	.  reduce 70 (src line 408)


state 108
	mul_op:  MOD.    (71)

	.  reduce 71 (src line 410)


state 109
	mul_op:  POW.    (72)

	.  reduce 72 (src line 412)


state 110
	stmt:  CONST id_expr opt_nl.concat_expr 
	mark_pos: .    (129)

	.  reduce 129 (src line 740)

	concat_expr  goto 142
	regex_pattern  goto 31
	mark_pos  goto 143

state 111
	opt_nl:  NL.    (132)

	.  reduce 132 (src line 762)


state 112
	log_filter_list:  log_filter_list COMMA.log_filter_expr 

	STRING  shift 52
	ID  shift 51
	.  error

	id_or_string  goto 50
	log_filter_expr  goto 144

state 113
	conditional_stmt:  conditional_expr compound_stmt ELSE.compound_stmt 

	LCURLY  shift 54
	.  error

	compound_stmt  goto 145

state 114
	stmt_list:  stmt_list.stmt 
	compound_stmt:  LCURLY stmt_list.RCURLY 
	mark_pos: .    (129)
	metric_hide_spec: .    (98)

	INVALID  shift 14
	COUNTER  reduce 98 (src line 553)
	GAUGE  reduce 98 (src line 553)
	TIMER  reduce 98 (src line 553)
	TEXT  reduce 98 (src line 553)
	HISTOGRAM  reduce 98 (src line 553)
	CONST  shift 12
	HIDDEN  shift 25
	NEXT  shift 11
	STOP  shift 13
	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	RCURLY  shift 146
	LPAREN  shift 39
	NL  shift 18
	LOGFILTER  shift 15
	.  reduce 129 (src line 740)

	stmt  goto 3
	conditional_stmt  goto 5
	conditional_expr  goto 16
	expr_stmt  goto 6
	expr  goto 19
	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 24
	unary_expr  goto 29
	assign_expr  goto 23
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 22
	indexed_expr  goto 34
	id_expr  goto 43
	concat_expr  goto 26
	pattern_expr  goto 21
	metric_declaration  goto 7
	decorator_declaration  goto 8
	decoration_stmt  goto 9
	regex_pattern  goto 31
	match_expr  goto 28
	delete_stmt  goto 10
	builtin_expr  goto 35
	metric_hide_spec  goto 20
	log_filter_stmt  goto 4
	mark_pos  goto 17

state 115
	conditional_stmt:  mark_pos OTHERWISE compound_stmt.    (21)

	.  reduce 21 (src line 192)


state 116
	builtin_expr:  mark_pos BUILTIN LPAREN.RPAREN 
	builtin_expr:  mark_pos BUILTIN LPAREN.arg_expr_list RPAREN 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	RPAREN  shift 147
	.  reduce 129 (src line 740)

	arg_expr_list  goto 148
	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 135
	indexed_expr  goto 34
	id_expr  goto 43
	concat_expr  goto 26
	pattern_expr  goto 136
	regex_pattern  goto 31
	match_expr  goto 28
	builtin_expr  goto 35
	arg_expr  goto 134
	mark_pos  goto 137

state 117
	regex_pattern:  mark_pos DIV in_regex.REGEX DIV 

	REGEX  shift 149
	.  error


state 118
	decorator_declaration:  mark_pos DEF ID.compound_stmt 

	LCURLY  shift 54
	.  error

	compound_stmt  goto 150

state 119
	decoration_stmt:  mark_pos DECO compound_stmt.    (124)

	.  reduce 124 (src line 707)


state 120
	postfix_expr:  postfix_expr.postfix_op 
	delete_stmt:  mark_pos DEL postfix_expr.AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos DEL postfix_expr.    (126)

	AFTER  shift 151
	INC  shift 73
	DEC  shift 74
	.  reduce 126 (src line 720)

	postfix_op  goto 72

state 121
	metric_declaration:  metric_hide_spec metric_type_spec metric_decl_attr_spec.    (97)
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_by_spec 
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_as_spec 
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_buckets_spec 
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_limit_spec 

	AS  shift 157
	BY  shift 156
	BUCKETS  shift 158
	LIMIT  shift 159
	.  reduce 97 (src line 542)

	metric_limit_spec  goto 155
	metric_as_spec  goto 153
	metric_by_spec  goto 152
	metric_buckets_spec  goto 154

state 122
	metric_decl_attr_spec:  metric_name_spec.    (104)

	.  reduce 104 (src line 586)


state 123
	metric_name_spec:  ID.    (105)

	.  reduce 105 (src line 593)


state 124
	metric_name_spec:  STRING.    (106)

	.  reduce 106 (src line 598)


state 125
	conditional_expr:  pattern_expr logical_op opt_nl.logical_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 160
	indexed_expr  goto 34
	id_expr  goto 43
	match_expr  goto 28
	builtin_expr  goto 35
	mark_pos  goto 95

state 126
	logical_expr:  logical_expr logical_op opt_nl.bitwise_expr 
	logical_expr:  logical_expr logical_op opt_nl.match_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 161
	indexed_expr  goto 34
	id_expr  goto 43
	match_expr  goto 162
	builtin_expr  goto 35
	mark_pos  goto 95

state 127
	concat_expr:  concat_expr PLUS opt_nl.regex_pattern 
	concat_expr:  concat_expr PLUS opt_nl.id_expr 
	mark_pos: .    (129)

	ID  shift 45
	.  reduce 129 (src line 740)

	id_expr  goto 164
	regex_pattern  goto 163
	mark_pos  goto 143

state 128
	bitwise_expr:  bitwise_expr bitwise_op opt_nl.rel_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 165
	shift_expr  goto 42
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 129
	assign_expr:  unary_expr ASSIGN opt_nl.logical_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 166
	indexed_expr  goto 34
	id_expr  goto 43
	match_expr  goto 28
	builtin_expr  goto 35
	mark_pos  goto 95

state 130
	assign_expr:  unary_expr ADD_ASSIGN opt_nl.logical_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 30
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	rel_expr  goto 32
	shift_expr  goto 42
	bitwise_expr  goto 27
	logical_expr  goto 167
	indexed_expr  goto 34
	id_expr  goto 43
	match_expr  goto 28
	builtin_expr  goto 35
	mark_pos  goto 95

state 131
	match_expr:  primary_expr match_op opt_nl.pattern_expr 
	match_expr:  primary_expr match_op opt_nl.primary_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 169
	indexed_expr  goto 34
	id_expr  goto 43
	concat_expr  goto 26
	pattern_expr  goto 168
	regex_pattern  goto 31
	builtin_expr  goto 35
	mark_pos  goto 137

state 132
	rel_expr:  rel_expr rel_op opt_nl.shift_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	multiplicative_expr  goto 46
	additive_expr  goto 44
	postfix_expr  goto 93
	unary_expr  goto 98
	shift_expr  goto 170
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 133
	indexed_expr:  indexed_expr LSQUARE arg_expr_list.RSQUARE 
	arg_expr_list:  arg_expr_list.COMMA arg_expr 

	RSQUARE  shift 171
	COMMA  shift 172
	.  error


state 134
	arg_expr_list:  arg_expr.    (92)

	.  reduce 92 (src line 513)


state 135
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 
	arg_expr:  logical_expr.    (94)

	AND  shift 69
	OR  shift 70
	.  reduce 94 (src line 526)

	logical_op  goto 71

state 136
	arg_expr:  pattern_expr.    (95)

	.  reduce 95 (src line 529)


state 137
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 

	BUILTIN  shift 56
	DIV  shift 57
	.  error


state 138
	primary_expr:  LPAREN logical_expr RPAREN.    (84)

	.  reduce 84 (src line 461)


state 139
	shift_expr:  shift_expr shift_op opt_nl.additive_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	multiplicative_expr  goto 46
	additive_expr  goto 173
	postfix_expr  goto 93
	unary_expr  goto 98
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 140
	additive_expr:  additive_expr add_op opt_nl.multiplicative_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	multiplicative_expr  goto 174
	postfix_expr  goto 93
	unary_expr  goto 98
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 141
	multiplicative_expr:  multiplicative_expr mul_op opt_nl.unary_expr 
	mark_pos: .    (129)

	STRING  shift 38
	CAPREF  shift 36
	CAPREF_NAMED  shift 37
	ID  shift 45
	INTLITERAL  shift 40
	FLOATLITERAL  shift 41
	NOT  shift 33
	LPAREN  shift 39
	.  reduce 129 (src line 740)

	primary_expr  goto 94
	postfix_expr  goto 93
	unary_expr  goto 175
	indexed_expr  goto 34
	id_expr  goto 43
	builtin_expr  goto 35
	mark_pos  goto 95

state 142
	stmt:  CONST id_expr opt_nl concat_expr.    (12)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 75
	.  reduce 12 (src line 136)


state 143
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 

	DIV  shift 57
	.  error

